# compression-tool

./: README.md  package-lock.json  package.json  rle.js
js-compressor/: package.json
rust-compressor/: Cargo.toml  Dockerfile
rust-compressor/benchmarks/: compresson_benchmarks.rs
rust-compressor/src/: file_type.rs  lib.rs  lz77.rs  main.rs  rle.rs
